--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <button onclick="turnOff()">Выключить</button>
 
   <script>
-    const espIP = "192.168.1.42"; // IP твоей ESP — замени!
+    const espIP = "192.168.1.26";
 
     document.getElementById('colorPicker').addEventListener('input', function () {
       const hex = this.value;
