--- a/index.html
+++ b/index.html
@@ -1,56 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>RGB Управление</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background: #121212;
-      color: white;
-      font-family: sans-serif;
-    }
-    input[type="color"] {
-      width: 200px;
-      height: 200px;
-      border: none;
-      background: none;
-    }
-    button {
-      margin-top: 30px;
-      padding: 10px 20px;
-      font-size: 18px;
-      background-color: crimson;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-  </style>
+  <title>RGB Strip Control</title>
 </head>
-<body>
-  <h1>Выбери цвет</h1>
-  <input type="color" id="colorPicker">
-  <button onclick="turnOff()">Выключить</button>
+<body style="text-align:center; margin-top: 50px; font-family: Arial">
+  <input type="color" id="colorPicker" value="#ffffff" style="width: 200px; height: 200px; border: none; background: none;"><br><br>
+  <button id="toggleBtn">Включить</button>
 
   <script>
-    const espIP = "192.168.1.26";
+    const ESP_IP = "http://192.168.1.26";
 
-    document.getElementById('colorPicker').addEventListener('input', function () {
-      const hex = this.value;
-      const r = parseInt(hex.substr(1, 2), 16);
-      const g = parseInt(hex.substr(3, 2), 16);
-      const b = parseInt(hex.substr(5, 2), 16);
-      fetch(`http://${espIP}/setColor?r=${r}&g=${g}&b=${b}`);
+    document.getElementById("colorPicker").addEventListener("input", function() {
+      const color = this.value.substring(1); // Убираем #
+      fetch(`${ESP_IP}/color?hex=${color}`);
     });
 
-    function turnOff() {
-      fetch(`http://${espIP}/turnOff`);
-    }
+    document.getElementById("toggleBtn").addEventListener("click", function() {
+      fetch(`${ESP_IP}/toggle`);
+    });
   </script>
 </body>
 </html>
