--- a/index.html
+++ b/index.html
@@ -2,21 +2,51 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>RGB Strip Control</title>
+  <title>Управление RGB Лентой</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+      background-color: #111;
+      color: #eee;
+      padding-top: 50px;
+    }
+    input[type="color"] {
+      width: 200px;
+      height: 200px;
+      border: none;
+      background: none;
+      cursor: pointer;
+    }
+    button {
+      padding: 15px 30px;
+      font-size: 18px;
+      margin-top: 20px;
+      border: none;
+      background-color: #333;
+      color: white;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    button:hover {
+      background-color: #555;
+    }
+  </style>
 </head>
-<body style="text-align:center; margin-top: 50px; font-family: Arial">
-  <input type="color" id="colorPicker" value="#ffffff" style="width: 200px; height: 200px; border: none; background: none;"><br><br>
-  <button id="toggleBtn">Включить</button>
+<body>
+  <h1>RGB Лента</h1>
+  <input type="color" id="colorPicker" value="#ffffff"><br>
+  <button id="toggleBtn">Включить / Выключить</button>
 
   <script>
     const ESP_IP = "http://192.168.1.26";
 
-    document.getElementById("colorPicker").addEventListener("input", function() {
-      const color = this.value.substring(1); // Убираем #
+    document.getElementById("colorPicker").addEventListener("input", function () {
+      const color = this.value.substring(1);
       fetch(`${ESP_IP}/color?hex=${color}`);
     });
 
-    document.getElementById("toggleBtn").addEventListener("click", function() {
+    document.getElementById("toggleBtn").addEventListener("click", function () {
       fetch(`${ESP_IP}/toggle`);
     });
   </script>
